Moved ProcessingContext to CanfarProcessingContext